# pretix_acronia_checkin_stats

./: .update-locales.sh  MANIFEST.in  Makefile  README.rst  pretixplugin.toml  pyproject.toml  setup.cfg
.github/workflows/: style.yml  tests.yml
pretix_acronia_checkin_view/: __init__.py  apps.py  plugin_urls.py  signals.py  urls.py  views.py
pretix_acronia_checkin_view/locale/de/LC_MESSAGES/: django.po
pretix_acronia_checkin_view/locale/de_Informal/LC_MESSAGES/: django.po  django.po.new
pretix_acronia_checkin_view/templates/pretix_acronia_checkin_view/: checkin_stats.html  checkin_stats_clean.html  checkin_stats_test.html
